# kanji

./: README.md  Taskfile.yml
.github/workflows/: release.yml  validate.yml
kanji/: pyproject.toml
kanji/kanji/: kanji_pair.py  kanji_pair_data.py
kanji/src/kanji/: __init__.py  kanji_pair.py  kanji_pair_data.py  kanji_pair_mapper.py
kanji/tests/: test_kanji_pair.py  test_kanji_pair_mapper.py
