[project]
name = "kanji"
version = "0.0.1"
description = "Japanse Kanji Handler"
authors = [
    { name = "shunsock", email = "s.tsuchiya.business@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]
